k8s/nocodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocodb
