k8s/staging_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-backend
  template:
    metadata:
      labels:
        app: staging-backend
    spec:
      containers:
        - name: staging-backend
          image: simonweigold/cold-fastapi-backend:alpha-20250227
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: staging-backend-service
spec:
  selector:
    app: staging-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
