k8s/staging_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-frontend
  template:
    metadata:
      labels:
        app: staging-frontend
    spec:
      containers:
        - name: staging-frontend
          image: simonweigold/cold-nuxt-frontend:alpha-20250227
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: staging-frontend-service
spec:
  selector:
    app: staging-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
