k8s/staging_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    #- host: "alpha.cold.global"
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: staging-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-frontend-service
                port:
                  number: 3000
